--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -803,6 +803,22 @@
             </objects>
             <point key="canvasLocation" x="3004" y="475"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="CDR-qm-Fcg">
+            <objects>
+                <viewController id="vP5-SK-Bul" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BbY-oN-QU5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="7bX-61-pMV"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="e05-Ft-nIb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I9F-GU-d6w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="25" y="1496"/>
+        </scene>
         <!--RegionVC-->
         <scene sceneID="yOI-0K-oOJ">
             <objects>
@@ -1006,7 +1022,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fKg-SW-LYJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="736.79999999999995" y="1151.8740629685158"/>
+            <point key="canvasLocation" x="1076" y="1151.8740629685158"/>
         </scene>
         <!--Community WriteVC-->
         <scene sceneID="DGd-yi-RMs">
@@ -1184,7 +1200,7 @@
                                     <color key="titleColor" red="0.80784313725490198" green="0.80784313725490198" blue="0.80784313725490198" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="JVK-mb-CP8" kind="presentation" id="dgF-1S-bz8"/>
+                                    <action selector="toNextPage:" destination="nbG-9b-z1D" eventType="touchUpInside" id="r5x-bO-NNL"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1243,6 +1259,7 @@
                     <connections>
                         <segue destination="vnt-hg-dzm" kind="relationship" relationship="viewControllers" id="H0Q-54-vCw"/>
                         <segue destination="AJh-0J-KwN" kind="relationship" relationship="viewControllers" id="eIE-Zr-eq8"/>
+                        <segue destination="er9-gp-dhO" kind="relationship" relationship="viewControllers" id="nzh-OZ-LBm"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ag1-cp-TlB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1630,6 +1647,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3rt-FU-zDo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2246" y="836"/>
+        </scene>
+        <!--순위-->
+        <scene sceneID="cCG-wt-JkB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="er9-gp-dhO" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="순위" image="tab_community" id="Za7-Y5-r65"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BsG-Zj-dPR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vP5-SK-Bul" kind="relationship" relationship="rootViewController" id="aqZ-Hm-m45"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nvj-az-3mI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-850" y="1496"/>
         </scene>
     </scenes>
     <resources>
